# Gallery-AYN

./: .gitignore  GaleriaAYN.spec  LICENSE  README.md  organizador_multimedia.py  package-lock.json  pyproject.toml  requirements.txt  test_clip.py  test_server.py
.github/workflows/: build-windows-portable.yml
docs/: ROADMAP-FEATURES.md  THIRD_PARTY_NOTICES.md  desktop-fedora-kde.md  windows-portable.md
org_multimedia/: __init__.py  __main__.py  app.py  app_tk.py  app_webview.py  bundle_paths.py  cli.py  fs_utils.py  gallery_frame.py  gallery_grid_layout.py  gallery_images.py  gallery_paths.py  linux_gui_env.py  media_organizer.py  media_server.py  organizer_tab.py  pywebview_bridge_return.py  pywebview_http.py  pywebview_qt_json.py  section_color.py  settings.py  ui_theme.py  web_api.py  windows_gui_env.py
org_multimedia/ai_modules/: __init__.py  ai_organizer.py
org_multimedia/api/: bridge_destinations.py  bridge_editor.py  bridge_gallery.py  bridge_index_warm.py  bridge_markers.py  bridge_mess.py  bridge_organizer.py  bridge_selection.py  bridge_system.py  web_api.py
org_multimedia/core/: file_ops.py  fs_path.py  fs_utils.py  gallery_grid_layout.py  gallery_images.py  gallery_index_cache.py  gallery_index_warm.py  (+20 more)
organizador_multimedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
packaging/: windows_entry.py
scripts/: build-windows-portable.ps1  copy-portable-legal.ps1  fetch-ffmpeg-windows.ps1  generate-release-notes.sh  install-desktop-kde.sh  organizador-launch.sh
webui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+129 files in other folders)
