[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "organizador-multimedia"
version = "0.1.0"
description = "Galería AYN — galería y organización multimedia (interfaz web embebida, PyWebView)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FernandoRP" }]
dependencies = [
    "Pillow",
    "pywebview",
]

[project.optional-dependencies]
qt = [
    "PyQt6",
    "PyQt6-WebEngine",
    "qtpy",
]
# Solo en la máquina Windows donde generes el .exe portable
windows-build = [
    "pyinstaller>=6",
]

[project.scripts]
organizador = "org_multimedia.cli:main"

[project.urls]
Homepage = "https://github.com/FernandoRP-nan/Organizador-Fedora-KDE"
Repository = "https://github.com/FernandoRP-nan/Organizador-Fedora-KDE"
Issues = "https://github.com/FernandoRP-nan/Organizador-Fedora-KDE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["org_multimedia*"]
